style: Fix overflow text

--- a/styles/components/Track.module.scss
+++ b/styles/components/Track.module.scss
@@ -4,7 +4,7 @@
   height: 108px;
   border-radius: 24px;
   box-shadow: 0 0 5px #999;
-  padding: 18px;
+  padding: 18px 0px 18px 18px;
   display: flex;
   width: 600px;
   max-width: calc(100vw - 48px);
@@ -18,31 +18,32 @@
 
   a {
     display: flex;
-    flex-grow: 1;
+    width: calc(100% - 72px);
   }
 
   img {
     height: 100%;
-    margin-right: 18px;
+    margin-right: 0px;
     border-radius: 4px;
   }
 
   .details {
     min-width: 0;
+    padding-left: 18px;
 
     >h1 {
       margin: 0;
       font-size: 24px;
-      text-overflow: ellipsis;
-      white-space: nowrap;
       overflow: hidden;
+      white-space: nowrap;
+      max-width: 100%;
     }
 
     >p {
       margin: 0;
-      text-overflow: ellipsis;
       white-space: nowrap;
       overflow: hidden;
+      max-width: 100%;
     }
   }
 
