--- a/styles/pages/Index.module.scss
+++ b/styles/pages/Index.module.scss
@@ -287,7 +287,6 @@
           color: #ccc;
           z-index: 2;
           padding: 12px 100px 12px 12px;
-          text-overflow: ellipsis;
 
           &:active {
             outline: 2px solid #5024ff;
